# AerialVehicleControl

./: .gitignore  .gitmodules  Fly_with_real_board.md  MAVROS_FINAL_STATUS.md  MAVROS_MIGRATION.md  MIGRATION_COMPLETE.md  QUICK_START.md  README.md  REAL_BOARD_CONNECTION.md  ROS2_Gazebo_ArduPilot_Setup.md  X500_FLIP_BUG_FIX.md  ros2_gz.repos  workspace.repos
log/: latest_list
src/ardupilot/: .lock-waf_linux_build  tasklist.json
src/ardupilot/Tools/ros2/ardupilot_sitl/: CMakeLists.txt  package.xml
src/ardupilot/Tools/ros2/ardupilot_sitl/launch/: mavros_real_board.launch.py  sitl_mavros_udp.launch.py
src/ardupilot/Tools/ros2/ardupilot_sitl/src/ardupilot_sitl/: launch.py
src/ardupilot/Tools/scripts/: arducopter.apj
src/ardupilot/modules/lwip/src/netif/ppp/: ppp.c
src/ardupilot/modules/mavlink/: mavgenerate.py
src/ardupilot/modules/mavlink/.github/workflows/: test_and_deploy.yml
src/ardupilot/modules/mavlink/cmake/arkcmake/: DefineCMakeDefaults.cmake
src/ardupilot/modules/mavlink/doc/: MAVLink2.md
src/ardupilot/modules/mavlink/message_definitions/v1.0/: ardupilotmega.xml  common.xml  development.xml
src/ardupilot_gazebo/config/: gazebo-iris.parm
src/ardupilot_gazebo/models/iris_no_gimbal/: model.config  model.sdf
src/ardupilot_gazebo/models/x500/: model.sdf
src/ardupilot_gazebo/models/x500_base/: model.sdf
src/ardupilot_gz/: README.md  ros2_gz.repos  ros2_gz_macos.repos
src/ardupilot_gz/ardupilot_gz_bringup/: CMakeLists.txt  package.xml
src/ardupilot_gz/ardupilot_gz_bringup/launch/: iris_maze.launch.py  iris_runway.launch.py  iris_warehouse.launch.py  multiagent.launch.py  sdf_to_urdf.py  wildthumper_playpen.launch.py
src/ardupilot_gz/ardupilot_gz_bringup/launch/robots/: iris.launch.py  iris_lidar.launch.py  robot.launch.py  wildthumper.launch.py
src/ardupilot_gz/ardupilot_gz_bringup/rviz/: iris.rviz  iris_with_lidar.rviz  wildthumper.rviz
src/ardupilot_gz/ardupilot_gz_bringup/scripts/: joint_state_pub.py
src/ardupilot_gz/ardupilot_gz_bringup/urdf/: iris_simple.urdf  iris_with_gimbal.urdf
src/drone_control/: package.xml  requirements.txt  setup.py
src/drone_control/drone_control/: arm_mission.py  circle_mission.py  pdsmc_circle_mission.py  pdsmc_core.py  pdsmc_mission.py  plot_paths.py  takeoff_land_mission  takeoff_land_mission.py  user_control_law.py
src/ros_gz/: README.md  RELEASING.md
src/ros_gz/ros_gz/: CHANGELOG.rst  package.xml
src/ros_gz/ros_gz_bridge/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros_gz/ros_gz_bridge/include/ros_gz_bridge/convert/: ros_gz_interfaces.hpp
src/ros_gz/ros_gz_bridge/ros_gz_bridge/: mappings.py
src/ros_gz/ros_gz_bridge/src/: bridge_handle.hpp  bridge_handle_gz_to_ros.cpp  bridge_handle_gz_to_ros.hpp  bridge_handle_gz_to_ros_parameters.hpp  factory.hpp  factory_interface.hpp  ros_gz_bridge.cpp
src/ros_gz/ros_gz_bridge/src/convert/: geometry_msgs.cpp  ros_gz_interfaces.cpp
src/ros_gz/ros_gz_bridge/test/: test_gid_filtering.cpp
src/ros_gz/ros_gz_bridge/test/utils/: gz_test_msg.cpp  gz_test_msg.hpp  ros_test_msg.cpp  ros_test_msg.hpp
src/ros_gz/ros_gz_image/: CHANGELOG.rst  package.xml
src/ros_gz/ros_gz_interfaces/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros_gz/ros_gz_interfaces/msg/: LogPlaybackStatistics.msg  WorldStatistics.msg
src/ros_gz/ros_gz_sim/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ros_gz/ros_gz_sim/launch/: gz_sim.launch.py.in
src/ros_gz/ros_gz_sim_demos/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_bridge/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_gazebo/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_gazebo_demos/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_image/: CHANGELOG.rst  package.xml
src/ros_gz/ros_ign_interfaces/: CHANGELOG.rst  package.xml
src/ros_gz/test_ros_gz_bridge/: CHANGELOG.rst  package.xml
src/sdformat_urdf/: README.md
src/sdformat_urdf/sdformat_urdf/: CMakeLists.txt  package.xml
